--- a/capstone project/Capstone.ipynb
+++ b/capstone project/Capstone.ipynb
@@ -1652,7 +1652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P-value of 0, reject null hypothesis that proportion of delays is the same between summer and winter. Winter has more. We are the 95% that the difference in proportions is between .052 and .148. "
+    "P-value of 0, reject null hypothesis that proportion of delays is the same between summer and winter. Winter has more. 95% confident that the difference in proportions is between .052 and .148. "
    ]
   },
   {
@@ -1720,7 +1720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P-value of 0, reject null hypothesis that proportion of delays is the same between winter and fall. Winter has more. We are the 95% that the difference in proportions is between .21 and .31. "
+    "P-value of 0, reject null hypothesis that proportion of delays is the same between winter and fall. Winter has more. 95% confident that the difference in proportions is between .21 and .31. "
    ]
   },
   {
