--- a/capstone project/Capstone.ipynb
+++ b/capstone project/Capstone.ipynb
@@ -1038,7 +1038,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# refer back to original flights_clean dataset - 2923 Delays had atleast one reason documented \n",
@@ -1258,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -1266,17 +1268,17 @@
      "output_type": "stream",
      "text": [
       "0.42952029520295204\n",
-      "0.5069222577209798\n",
-      "[-0.14557729769162575, -0.009226627344429694]\n"
+      "0.5051369863013698\n",
+      "[-0.14480188776206657, -0.006431494434769008]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-22.062181847628569, 7.2976749620977578e-108)"
+       "(-17.770539827059192, 1.1953491395162437e-70)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1286,7 @@
    "source": [
     "# how does friday compare to saturday \n",
     "friday = flights_w_weather[flights_w_weather.DAY_OF_WEEK==6]\n",
-    "other = flights_w_weather[flights_w_weather.DAY_OF_WEEK==1]\n",
+    "other = flights_w_weather[flights_w_weather.DAY_OF_WEEK==7]\n",
     "friday_size = len(friday)\n",
     "other_size = len(other)\n",
     "\n",
@@ -1321,13 +1323,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P-value of 0, reject null hypothesis that proportion of delays is the same between Friday and Saturday. Friday most likely has less. 95% confident that the difference in proportions is between -.15 and -.009. "
+    "P-value of 0, reject null hypothesis that proportion of delays is the same between Friday and Saturday. Friday most likely has less. 95% confident that the difference in proportions is between -.15 and -.006. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# identify each season\n",
@@ -1868,7 +1872,9 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Split the data into a training and test set.\n",
@@ -1880,7 +1886,9 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "param_grid = {\"C\":[0.001, 0.1, 1, 10, 100]}\n",
@@ -2017,7 +2025,9 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(dflogit_1[['4', '5', '6', '7',\n",
@@ -2028,7 +2038,9 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "forest_params = {'n_estimators': [1,10,40,70,100],\n",
@@ -2155,7 +2167,9 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train, X_test,y_train,y_test = train_test_split(dflogit_1[['4', '5', '6', '7',\n",
@@ -2166,7 +2180,9 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "param_grid = {'n_neighbors': [20,30,40,50,60,70,80,90,100]}\n",
