--- a/capstone project/Report.ipynb
+++ b/capstone project/Report.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,17 +37,17 @@
     "* Do arrival and departure delays always occur together? How many delays are there total?\n",
     "    * No, only 58% have both. In total, there were 6467 delays (50.76%) that occurred between Boston and Chicago in 2015.\n",
     "* How many airlines fly this route? \n",
-    "<img src=\"files/airlines.JPG\">\n",
+    "<img src=\"files/images/airlines.JPG\">\n",
     "   * There are five airlines that run between Chicago and Boston in this dataset. American Airlines has the highest count of 5744 flights while Spirit Airlines has the lowest count of 352 flights. \n",
     "* What are the counts of delay types that were documented? \n",
-    "<img src=\"files/delay_types.JPG\">\n",
+    "<img src=\"files/images/delay_types.JPG\">\n",
     "   * Air system has the highest count: 1736 delays while security has the lowest count: 3 delays. I was surprised by the relatively small amount of weather delays: 229. \n",
     "* What proportion of flights are delayed by:\n",
-    "<img src=\"files/airline_delay.JPG\">\n",
+    "<img src=\"files/images/airline_delay.JPG\">\n",
     "   * Spirit has the highest percentage of delays: 68.47% while American has the lowest percentage of delays: 41.56%.\n",
-    "<img src=\"files/season.JPG\">\n",
+    "<img src=\"files/images/season.JPG\">\n",
     "   * Winter has the highest percentage of delays: 62.12% while Fall has the lowest percentage of delays: 35.46%.\n",
-    "<img src=\"files/day_of_week.JPG\">\n",
+    "<img src=\"files/images/day_of_week.JPG\">\n",
     "   * Wednesday has the highest percentage of delays: 53.65% while Friday has the lowest percentage of delays: 42.95%.\n",
     "\n",
     "## Hypothesis Tests\n",
@@ -85,7 +84,7 @@
     "    * Airport Coefficients: Boston appears to have a higher contribution to delay than Chicago.\n",
     "* AUC: .65\n",
     "* ROC CURVE\n",
-    "<img src=\"files/roc_lr.JPG\">\n",
+    "<img src=\"files/images/roc_lr.JPG\">\n",
     "\n",
     "### Random Forest \n",
     "* Accuracy Score: 64% \n",
@@ -98,7 +97,7 @@
     "    * PRCP is the most important feature. AWND is 2nd most important. \n",
     "* AUC: .68\n",
     "* ROC CURVE\n",
-    "<img src=\"files/roc_rf.JPG\">\n",
+    "<img src=\"files/images/roc_rf.JPG\">\n",
     "\n",
     "### KNN\n",
     "* Accuracy Score: 61% \n",
@@ -109,16 +108,18 @@
     "    * False Negative:  694 were delays and predicted incorrectly\n",
     "* AUC: .64\n",
     "* ROC CURVE\n",
-    "<img src=\"files/roc_knn.JPG\">\n",
+    "<img src=\"files/images/roc_knn.JPG\">\n",
     "\n",
     "## Conclusion \n",
     "\n",
     "### Model Selection\n",
     "* Random Forest Classifier provides the highest AUC score of .68. This is fairly low, but I would choose it over KNN and Logistic Regression. The main concern for all the models is the type 1 and type 2 errors. There were 599 type 1 errors and 559 type 2 errors using Random Forest. These are both important errors to consider. A type 1 error could result in a customer missing their flight because they gave themselves more time when they shouldn't have. A type 2 error could result in a customer being late to an important meeting that same day as they wouldn't have given themselves enough time to travel. I think it is obvious that one shouldn't rely on these models entirely, but there are some useful insights. \n",
+    "\n",
     "### Recommendations \n",
     "* As most people would suspect: snow, precipitation and wind are important factors in determining a delay. These factors are often more severe in the winter time and thus it would make sense that winter caused the most delays of any season. When booking flights in the winter time, customers should keep this in mind and should give themselves more time to travel. \n",
     "* American Airlines caused the least delays and it seems that if you are on a time crunch traveling between Chicago and Boston, it would be a smarter choice than United. \n",
     "* If leaving on a weekend, Friday would be a smarter choice than Saturday. \n",
+    "\n",
     "### Next Steps\n",
     "* I would like to utilize the rest of the dataset to get a deeper understanding of the best airlines and airports when under a time crunch. For example, if a customer had an interview in New York and was flying from the Cleveland area, should they fly out of Akron/Canton or Cleveland? Should they fly to JFK or Laguardia? I would also go back and analyze time of day to get a deeper understanding of the impact of timing on delays. Should my flight be at 6am or 1pm?\n",
     "* I would then feed flight information to the model and inform travel decisions. \n"
