--- a/Inferential Statistics/EDA/hospital_readmit/sliderule_dsi_inferential_statistics_exercise_3.ipynb
+++ b/Inferential Statistics/EDA/hospital_readmit/sliderule_dsi_inferential_statistics_exercise_3.ipynb
@@ -182,16 +182,30 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A\n",
+    "No significance testing was done to ensure that observed correlation between number of discharges and readmission rates was in fact significant. Furthermore, the statement that smaller hospitals lack the resources to prevent readmissions has no backing. Thus, I would disagree with the recommendations. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## B\n",
+    "\n",
+    "First, I will conduct a regression test to determine if there is a significant relationship between the number of discharges and the excess readmissions ratio. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
     "Hypothesis \n",
     "Ho: Slope=0 or no relationship\n",
-    "Ha: Slope!=0 \n",
-    "\n",
-    "Testing using linear regression line.  P-value allows rejection of null hypothesis that slope is 0. Appears that there is a tiny downward trend but should not use the number of discharges to explain variability in excess readmission ratio because r-squared is very very small. \n",
-    "  "
+    "Ha: Slope!=0 "
    ]
   },
   {
@@ -241,6 +255,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P-value is less than .01 and allows rejection of null hypothesis that slope is 0. Appears that there is in fact a tiny downward trend but should not use the number of discharges to explain variability in excess readmission ratio because r-squared is very very small. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -266,6 +287,19 @@
    "metadata": {},
    "source": [
     "Also shows weak negative correlation. Supports idea that conclusion of significant correlation between the two is wrong. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion and Recommendation\n",
+    "\n",
+    "Number of discharges is not a strong basis for recommendation. \n",
+    "\n",
+    "Additional testing should be done that takes a more detailed approach. For example, I would think that measure name is a very important factor in readmission rates. Excess readmission ratio is calculated for heart attack, heart failure, pneumonia, chronic obstructive pulmonary disease, hip/knee replacement, and coronary artery bypass graft surgery and is computed by using the predicted and expected readmissions (based on average hospital with similar patients). What does an average hospital mean really and how similar are the patients outside of their disease? What race, age, income and education level are the patients that are admitted? It is possible that a descrepancy in readmissions is based on the patients and not the hospital. For example, an older and more educated patient may be more responsible and would have an easier time following directions given by a doctor or an elderly patient might be more likely to be readmitted simply because of their age. \n",
+    "\n",
+    "My recommendation would be to utilize patient data in combination with the current hospital data to compare groups. "
    ]
   },
   {
