--- a/Machine Learning/clustering/Mini_Project_Clustering.ipynb
+++ b/Machine Learning/clustering/Mini_Project_Clustering.ipynb
@@ -2249,9 +2249,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cluster 0 -- mainly contains champagne and cabernet sauvignon. \n",
-    "Cluster 1 -- mainly contains pinot noir. \n",
-    "Cluster 2 -- mainly contains espumante and prosecco. "
+    "Cluster 0 -- mainly contains champagne and espumante. \n",
+    "Cluster 1 -- mainly contains pinot noir and espumante. \n",
+    "Cluster 2 -- mainly contains champage and carbernet sauvignon. "
    ]
   },
   {
@@ -2339,15 +2339,6 @@
     "    wine_origin = group[['varietal','origin']]\n",
     "    wo_tbl = wine_origin.groupby(\"origin\").varietal.value_counts()\n",
     "    print(wo_tbl)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Cluster 0 -- highest order count -- french champagne.\n",
-    "Cluster 1 -- highest order count -- espumante (Oregon and South Africa)\n",
-    "Cluster 2 -- highest order count -- pinot noir (Italy, Germany, France and Australia). "
    ]
   },
   {
