--- a/capstone project/Capstone.ipynb
+++ b/capstone project/Capstone.ipynb
@@ -1032,7 +1032,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P-value of 0, reject null hypothesis that proportion of delays is the same between American and United. United has more. 95% confident that the difference in proportions is between -.232 and -.155. "
+    "P-value less than .05, reject null hypothesis that proportion of delays is the same between American and United. United has more. 95% confident that the difference in proportions is between -.232 and -.155. "
    ]
   },
   {
@@ -1323,7 +1323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P-value of 0, reject null hypothesis that proportion of delays is the same between Friday and Saturday. Friday most likely has less. 95% confident that the difference in proportions is between -.15 and -.006. "
+    "P-value less than .05, reject null hypothesis that proportion of delays is the same between Friday and Saturday. Friday most likely has less. 95% confident that the difference in proportions is between -.15 and -.006. "
    ]
   },
   {
@@ -1479,7 +1479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P-value of 0, reject null hypothesis that proportion of delays is the same between summer and winter. Winter has more. 95% confident that the difference in proportions is between .052 and .148. "
+    "P-value less than .05, reject null hypothesis that proportion of delays is the same between summer and winter. Winter has more. 95% confident that the difference in proportions is between .052 and .148. "
    ]
   },
   {
@@ -1547,7 +1547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P-value of 0, reject null hypothesis that proportion of delays is the same between winter and fall. Winter has more. 95% confident that the difference in proportions is between .21 and .31. "
+    "P-value less than .05, reject null hypothesis that proportion of delays is the same between winter and fall. Winter has more. 95% confident that the difference in proportions is between .21 and .31. "
    ]
   },
   {
@@ -1615,87 +1615,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P-value of 0, reject null hypothesis that proportion of delays is the same between winter and spring. Winter has more delays. 95% confident that difference in proportions is between .06 and .16.\n",
+    "P-value less than .05, reject null hypothesis that proportion of delays is the same between winter and spring. Winter has more delays. 95% confident that difference in proportions is between .06 and .16.\n",
     "\n",
     "Safe to say from this analysis that winter does have the highest proportion of delays. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6374\n",
-      "6366\n",
-      "3288\n",
-      "3179\n",
-      "0.5158456228427989\n",
-      "0.4993716619541313\n",
-      "[-0.017552611449394073, 0.05050053322672926]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(2.0035869948090332, 0.045114320125785611)"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# does airport have a significant effect on delays?\n",
-    "\n",
-    "# determine sample sizes again\n",
-    "ord_orig = flights_w_weather[flights_w_weather.ORIGIN_AIRPORT=='ORD']\n",
-    "bos_orig = flights_w_weather[flights_w_weather.ORIGIN_AIRPORT=='BOS']\n",
-    "ord_size = len(ord_orig)\n",
-    "bos_size = len(bos_orig)\n",
-    "print(ord_size)\n",
-    "print(bos_size)\n",
-    "\n",
-    "# determine number of delays again \n",
-    "delay_o = len(ord_orig[ord_orig.DELAY == 1])\n",
-    "delay_b = len(bos_orig[bos_orig.DELAY == 1])\n",
-    "print(delay_o)\n",
-    "print(delay_b)\n",
-    "\n",
-    "# determine proportion of delays\n",
-    "prop_delay_o = delay_o/ord_size\n",
-    "prop_delay_b = delay_b/bos_size\n",
-    "print(prop_delay_o)\n",
-    "print(prop_delay_b)\n",
-    "\n",
-    "\"\"\"\n",
-    "Ho: prop_delay_o=prop_delay_b\n",
-    "Ha: prop_delay_o!=prop_delay_b\n",
-    "\"\"\"\n",
-    "\n",
-    "import math\n",
-    "# compute margin\n",
-    "margin = 1.96 * math.sqrt( ( prop_delay_o*(1-prop_delay_o) / bos_size) + \n",
-    "                          (prop_delay_b*(1-prop_delay_b)/ ord_size) )\n",
-    "\n",
-    "# compute confidence interval for difference in proportion \n",
-    "confidence_int= [prop_delay_o-prop_delay_b-1.96*margin,prop_delay_o-prop_delay_b+1.96*margin]\n",
-    "print(confidence_int)\n",
-    "\n",
-    "# proportions ztest\n",
-    "from statsmodels.stats.proportion import proportions_ztest as pz\n",
-    "pz(np.array([delay_o,delay_b]),np.array([bos_size,ord_size]),value=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "p-value low enough to reject null hypothesis, there is a slight difference in proportion of delays. Much more likely that Ohare will have more as confidence interval is -.01 to .05.  "
    ]
   },
   {
@@ -1891,6 +1813,7 @@
    },
    "outputs": [],
    "source": [
+    "# gridsearch for optimal parameters\n",
     "param_grid = {\"C\":[0.001, 0.1, 1, 10, 100]}\n",
     "clf=GridSearchCV(LogisticRegression(), param_grid, cv = 5)"
    ]
@@ -1913,7 +1836,7 @@
     }
    ],
    "source": [
-    "clf.fit(Xlr, ylr)\n",
+    "clf.fit(X_train, y_train)\n",
     "# accuracy score \n",
     "y_test_pred = clf.predict(X_test)\n",
     "print('accuracy score:{:.2f}'.format(accuracy_score(y_test, y_test_pred)))  \n",
@@ -1963,13 +1886,13 @@
    "source": [
     "Snow is the most influential feature. PRCP is 2nd most influential. \n",
     "\n",
-    "Weekday coefficients: Wednesday, Thursday, Saturday, Monday all contribute to a higher likelihood of delay than Tuesday. Friday and Saturday all contribute to a lower likelihood of delay.\n",
+    "Weekday coefficients: Wednesday, Saturday, and Sunday all contribute to a higher likelihood of delay than Tuesday. They are positive. \n",
     "\n",
     "Airline Coefficients: Spirit Airlines appears to have the lowest contribution to a delay. B6, AA, UA, and OO are all negative. \n",
     "\n",
     "Season Coefficients: Fall appears to have the lowest contribution to a delay. Winter, Spring, and Summer are all positive. \n",
     "\n",
-    "Airport Coefficients: Boston appears to have a higher contribution to delay than Chicago. "
+    "Airport Coefficients: Boston appears to have a higher contribution to delay than Chicago. Ohare is negative. "
    ]
   },
   {
@@ -1997,9 +1920,9 @@
    ],
    "source": [
     "# roc \n",
-    "probs = clf.predict_proba(Xtestlr)\n",
+    "probs = clf.predict_proba(X_test)\n",
     "preds = probs[:,1]\n",
-    "fpr, tpr, threshold = metrics.roc_curve(ytestlr, preds)\n",
+    "fpr, tpr, threshold = metrics.roc_curve(y_test, preds)\n",
     "roc_auc = metrics.auc(fpr, tpr)\n",
     "print(roc_auc)\n",
     "\n",
@@ -2043,6 +1966,7 @@
    },
    "outputs": [],
    "source": [
+    "# gridsearch for optimal parameters\n",
     "forest_params = {'n_estimators': [1,10,40,70,100],\n",
     "                 'min_samples_split': [8, 16], \n",
     "                 'min_samples_leaf': [4, 8]}\n",
@@ -2185,6 +2109,7 @@
    },
    "outputs": [],
    "source": [
+    "# gridsearch for optimal parameters\n",
     "param_grid = {'n_neighbors': [20,30,40,50,60,70,80,90,100]}\n",
     "knn = GridSearchCV(KNeighborsClassifier(), param_grid, cv = 5)"
    ]
